--- a/MNIST_addition_final.ipynb
+++ b/MNIST_addition_final.ipynb
@@ -2,34 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import import_ipynb\n",
-    "import MNIST_addition"
+    "from model import *\n",
+    "from utils import *\n",
+    "from training import *"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_and_evaluate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrain_and_evaluate\u001b[49m(\u001b[38;5;241m0.001\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m128\u001b[39m, \u001b[38;5;241m32\u001b[39m, nn\u001b[38;5;241m.\u001b[39mReLU(), \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, combined_train_images, combined_train_labels, val_images, val_labels, test_images, test_labels, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124madam\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m10\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_and_evaluate' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "train_and_evaluate(0.001, 3, 128, 32, nn.ReLU(), 0.3, 0.5, combined_train_images, combined_train_labels, val_images, val_labels, test_images, test_labels, 'adam', 10)"
+    "### Loading Data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
