--- a/MNIST_addition_plots.ipynb
+++ b/MNIST_addition_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,15 @@
     "from training import *\n",
     "from model import *\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import torch \n",
+    "import torch.nn as nn\n",
+    "import torchvision\n",
+    "import optuna\n",
+    "from torchvision import transforms, datasets\n",
+    "import random\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n"
    ]
   },
   {
@@ -22,9 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "FCNN_optimised_5_hyp() missing 3 required positional arguments: 'test_images', 'test_labels', and 'optimizer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m----> 2\u001b[0m _,_,_,_,_,_, train_list_adam_fixed, val_list_adam_fixed, train_acc_list_adam_fixed, val_acc_list_adam_fixed, _,_,_ \u001b[38;5;241m=\u001b[39m \u001b[43mFCNN_optimised_5_hyp\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43madam\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m np\u001b[38;5;241m.\u001b[39msavez(train_list_adam_fixed, val_list_adam_fixed, train_acc_list_adam_fixed, val_acc_list_adam_fixed)\n\u001b[1;32m      6\u001b[0m _,_,_,_,_,_, train_list_sgd_fixed, val_list_sgd_fixed, train_acc_list_sgd_fixed, val_acc_list_sgd_fixed, _,_,_ \u001b[38;5;241m=\u001b[39m FCNN_optimised_5_hyp(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msgd\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m3\u001b[39m, epochs, \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: FCNN_optimised_5_hyp() missing 3 required positional arguments: 'test_images', 'test_labels', and 'optimizer'"
+     ]
+    }
+   ],
    "source": [
     "epochs = 10\n",
     "_,_,_,_,_,_, train_list_adam_fixed, val_list_adam_fixed, train_acc_list_adam_fixed, val_acc_list_adam_fixed, _,_,_ = FCNN_optimised_5_hyp('adam', 3, epochs, True)\n",
@@ -88,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
