--- a/MNIST_addition_dev.ipynb
+++ b/MNIST_addition_dev.ipynb
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1698,12 +1698,13 @@
     "plt.ylabel(\"Loss\")\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
+    "plt.savefig('loss_8.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1731,6 +1732,7 @@
     "plt.ylabel(\"Accuracy\")\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
+    "plt.savefig('accuracy_8.png')\n",
     "plt.show()"
    ]
   },
@@ -6099,6 +6101,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_data(train_images, train_labels, val_images, val_labels, batch_size):\n",
+    "    train_data_stacked = torch.stack(train_images)\n",
+    "    train_labels_stacked = torch.tensor(train_labels)\n",
+    "\n",
+    "    val_data_stacked = torch.stack(val_images)\n",
+    "    val_labels_stacked = torch.tensor(val_labels)\n",
+    "\n",
+    "    train_tensor = TensorDataset(train_data_stacked, train_labels_stacked)\n",
+    "    val_tensor = TensorDataset(val_data_stacked, val_labels_stacked)\n",
+    "\n",
+    "    train_loader = DataLoader(train_tensor, batch_size=batch_size, shuffle=True)\n",
+    "    val_loader = DataLoader(val_tensor, batch_size=batch_size, shuffle=False)\n",
+    "    return train_loader, val_loader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader, val_loader = prepare_data(combined_train_images, combined_train_labels, val_images, val_labels, 64)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6107,14 +6139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Realised that i should have the optimiser outside the optimisation function\n",
     "\n",
     "\n",
-    "def objective_fixed_opt(trial, optimizer_name):\n",
+    "def objective_fixed_opt(trial, optimizer_name, train_loader, val_loader):\n",
     "    \"\"\"\n",
     "    Objective function for Optuna to optimize, for the 5 main hyperparameters.\n",
     "\n",
@@ -6157,19 +6189,6 @@
     "        raise ValueError(f\"Unknown optimizer: {optimizer_name}\")\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "    # Data loaders\n",
-    "    train_data_stacked = torch.stack(combined_train_images)\n",
-    "    train_labels_stacked = torch.tensor(combined_train_labels)\n",
-    "\n",
-    "    val_data_stacked = torch.stack(val_images)\n",
-    "    val_labels_stacked = torch.tensor(val_labels)\n",
-    "\n",
-    "    train_tensor = TensorDataset(train_data_stacked, train_labels_stacked)\n",
-    "    val_tensor = TensorDataset(val_data_stacked, val_labels_stacked)\n",
-    "\n",
-    "    train_loader = DataLoader(train_tensor, batch_size=64, shuffle=True)\n",
-    "    val_loader = DataLoader(val_tensor, batch_size=64, shuffle=False)\n",
-    "\n",
     "    best_val_acc = 0.0\n",
     "\n",
     "    for epoch in range(10):\n",
@@ -6185,7 +6204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6216,7 +6235,7 @@
     "\n",
     "    if optimisation_required == True:\n",
     "        study = optuna.create_study(direction='maximize')\n",
-    "        study.optimize(lambda trial: objective_fixed_opt(trial, optimizer), n_trials=n_trials)\n",
+    "        study.optimize(lambda trial: objective_fixed_opt(trial, optimizer, train_loader, val_loader), n_trials=n_trials)\n",
     "        # joblib.dump(study, 'study.pkl')\n",
     "\n",
     "        print(f'Best hyperparameters: {study.best_params}')\n",
@@ -6388,16 +6407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlmkm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6413,7 +6423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -6422,7 +6432,7 @@
        "((84000, 1568), (84000,), (14000, 1568), (14000,), (14000, 1568), (14000,))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
