Seperate notebooks, running plots tonight

--- a/MNIST_addition_dev.ipynb
+++ b/MNIST_addition_dev.ipynb
@@ -21,7 +21,8 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "import joblib"
+    "import joblib\n",
+    "from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
@@ -394,15 +395,12 @@
     "    AddSaltAndPepperNoise(prob=0.05),\n",
     "    transforms.Normalize((0.5,), (0.5,))\n",
     "])\n",
-    "# Assuming train_images is a list of PyTorch tensors\n",
+    "\n",
     "augmented_images = []\n",
     "\n",
     "for tensor_image in train_images:\n",
-    "    # Convert tensor to PIL Image\n",
     "    pil_image = F.to_pil_image(tensor_image)\n",
-    "    # Apply the augmentations\n",
     "    augmented_image = augmented_transform(pil_image)  # Apply transform pipeline\n",
-    "    # Append to the list\n",
     "    augmented_images.append(augmented_image)\n",
     "\n"
    ]
@@ -5348,8 +5346,6 @@
     "val_losses_grid = val_losses.reshape(len(num_hidden_layers), int(len(hidden_sizes)//len(num_hidden_layers)))\n",
     "\n",
     "\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
     "fig = plt.figure(figsize=(10, 6))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
@@ -7180,48 +7176,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "\n",
-    "def train_and_evaluate_gb(train_X, train_y, val_X, val_y, test_X, test_y):\n",
-    "    \"\"\"\n",
-    "    Train and evaluate a Gradient Boosting classifier\n",
-    "    \n",
-    "    Args:\n",
-    "    train_X: np.ndarray, training data\n",
-    "    train_y: np.ndarray, training labels\n",
-    "    val_X: np.ndarray, validation data\n",
-    "    val_y: np.ndarray, validation labels\n",
-    "    test_X: np.ndarray, test data\n",
-    "    test_y: np.ndarray, test labels\n",
-    "    \n",
-    "    Returns:\n",
-    "    val_acc_gb: float, validation accuracy\n",
-    "    test_acc_gb: float, test accuracy\n",
-    "    \"\"\"\n",
-    "    # Instantiate and train Gradient Boosting Classifier\n",
-    "    gb_clf = GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
-    "    gb_clf.fit(train_X, train_y)\n",
-    "    \n",
-    "    # Evaluate on validation and test sets\n",
-    "    val_preds_gb = gb_clf.predict(val_X)\n",
-    "    test_preds_gb = gb_clf.predict(test_X)\n",
-    "    \n",
-    "    val_acc_gb = accuracy_score(val_y, val_preds_gb)\n",
-    "    test_acc_gb = accuracy_score(test_y, test_preds_gb)\n",
-    "    \n",
-    "    print(f\"Gradient Boosting - Validation Accuracy: {val_acc_gb:.4f}, Test Accuracy: {test_acc_gb:.4f}\")\n",
-    "    \n",
-    "    return val_acc_gb, test_acc_gb\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7409,16 +7363,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "study_gb = optuna.create_study(direction='maximize')\n",
-    "study_gb.optimize(objective_gb, n_trials=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -7439,13 +7383,6 @@
    "source": [
     "study_rf.best_params"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
