--- a/notebooks/Data.ipynb
+++ b/notebooks/Data.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import *\n",
-    "from utils import *\n",
-    "from training import *"
+    "from src.utils_func import *\n",
+    "from src.training import *\n",
+    "from src.model import *"
    ]
   },
   {
